security-groups.tf
# security group to allow instance to talk to some ports outside
resource "aws_security_group" "lab-sg" {
  name        = "lab-sg"
  description = "security group for instance"
  vpc_id      = aws_vpc.lab-vpc.id

  ingress {
    description = "Ports for the http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Ports for the sql"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Enable SSH connections to the web server"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "value"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
